Phase 11: FE integration V2
